# webdeface

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  component_debugging_tasks.md  comprehensive_test_runner.py  config.example.yaml  debug_cli_execution.py  debug_cli_framework.py  debug_test.py  debug_test_discovery.py  docker-compose.yml  pyproject.toml  pytest.ini  report.xml  requirements.txt  run_infrastructure.sh  test_failure_analysis.json  test_quick_validation.py  test_slack_cli_direct.py  test_slack_cli_minimal.py  test_slack_cli_simple.py
docs/: API.md  CLI.md  CONFIGURATION.md  DATA_MODELS.md  SITE_CHANGE_ANALYSIS_ARCHITECTURE.md  SLACK_APP_SETUP.md  SLACK_COMMANDS.md  SLACK_INTEGRATION.md  TROUBLESHOOTING.md  toolng_documentation.md
src/webdeface/: __init__.py  main.py
src/webdeface/api/: __init__.py  app.py  auth.py  dependencies.py  middleware.py  types.py
src/webdeface/api/routers/: __init__.py  alerts.py  auth.py  metrics.py  monitoring.py  system.py  websites.py
src/webdeface/api/routes/: __init__.py
src/webdeface/classifier/: __init__.py  alerts.py  claude.py  feedback.py  orchestrator.py  pipeline.py  types.py  vectorizer.py
src/webdeface/cli/: __init__.py  main.py  types.py
src/webdeface/cli/commands/: __init__.py
src/webdeface/config/: __init__.py  loader.py  settings.py  types.py
src/webdeface/notification/: __init__.py  types.py
src/webdeface/notification/slack/: __init__.py  app.py  commands.py  delivery.py  formatting.py  handlers.py  integration.py  permissions.py  router.py
src/webdeface/notification/slack/handlers/: __init__.py  base.py  monitoring.py  router.py  system.py  website.py
src/webdeface/notification/slack/utils/: __init__.py  formatters.py  parsers.py  validators.py
src/webdeface/scheduler/: __init__.py  interfaces.py  manager.py  monitoring.py  orchestrator.py  registry.py  types.py  workflow.py
src/webdeface/scraper/: __init__.py  browser.py  extractor.py  hashing.py  orchestrator.py  types.py  visual.py
src/webdeface/storage/: __init__.py  interface.py  types.py
src/webdeface/storage/qdrant/: __init__.py  client.py
src/webdeface/storage/sqlite/: __init__.py  database.py  models.py
src/webdeface/utils/: __init__.py  async_utils.py  logging.py  types.py
tests/: __init__.py  conftest.py  mock_settings.py  test_api_interface.py  test_auth_mocking_validation.py  test_business_logic_integration.py  test_classifier_components.py  test_cli_interface.py  test_imports.py  test_scheduler_components.py  test_scraper_components.py  test_slack_cli_integration.py  test_slack_infrastructure.py  test_storage_infrastructure.py
tests/fixtures/: api_mocks.py
tests/slack/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_command_router.py  test_monitoring_commands.py  test_parsers.py  test_slack_integration.py  test_system_commands.py  test_website_commands.py
